fix align

--- a/src/Lab6/blog/css/style.css
+++ b/src/Lab6/blog/css/style.css
@@ -86,6 +86,10 @@ body {
   margin-top: 0;
 }
 
+.img-wrapper_image{
+  margin: 0 auto;
+}
+
 @media (min-width: 768px) {
   html {
     font-size: 18px;
